--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
   </head>
   <body>
     <div style="margin-left:40px; margin-top:200px">
-      <span style="font-size:40px">First</span> <br>
+      <span style="font-size:40px">اللاحقة</span> <br>
       <input id="fir" type="number"><br><br>
 
-      <span style="font-size:40px">Last</span><br>
+      <span style="font-size:40px">الميزانية</span><br>
       <input id="sec" type="number"><br><br>
 
       <span style="font-size:40px">Amount</span><br>
