--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
       <span style="font-size:40px">الميزانية</span><br>
       <input id="sec" type="number"><br><br>
 
-      <span style="font-size:40px">Amount</span><br>
+      <span style="font-size:40px">المبلغ</span><br>
       <input style="color:red;" disabled="disabled" id="res"><br><br><br>
 
-      <button onclick="push()" style="font-size:40px">Calculate</button> <br><br><br>
+      <button onclick="push()" style="font-size:40px">احسب</button> <br><br><br>
     </div>
   </body>
 </html>
