--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <input id="sec" type="number"><br><br>
 
       <span style="font-size:40px">المبلغ</span><br>
-      <input style="color:red;" disabled="disabled" id="res"><br><br><br>
+      <input style="color:#0f172a" disabled="disabled" id="res"><br><br><br>
 
       <button onclick="push()" style="font-size:40px">احسب</button> <br><br><br>
     </div>
